2008-06-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/ivs.cpp:
	* ica/x11/x11vnc/userinput.c:
	* ica/x11/x11vnc/inet.c:
	* ica/x11/x11vnc/options.h:
	* ica/x11/x11vnc/xinerama.c:
	* ica/x11/x11vnc/user.c:
	* ica/x11/x11vnc/8to24.c:
	* ica/x11/x11vnc/connections.c:
	* ica/x11/x11vnc/cursor.c:
	* ica/x11/x11vnc/x11vnc_defs.c:
	* ica/x11/x11vnc/tkx11vnc.h:
	* ica/x11/x11vnc/scan.c:
	* ica/x11/x11vnc/gui.c:
	* ica/x11/x11vnc/selection.c:
	* ica/x11/x11vnc/unixpw.c:
	* ica/x11/x11vnc/screen.c:
	* ica/x11/x11vnc/x11vnc.c:
	* ica/x11/x11vnc/ssltools.h:
	* ica/x11/x11vnc/sslhelper.c:
	* ica/x11/x11vnc/help.c:
	* ica/x11/x11vnc/options.c:
	* ica/x11/libvncserver/stats.c:
	* ica/x11/libvncserver/rfbregion.c:
	* ica/x11/libvncserver/zywrletemplate.c:
	* ica/x11/libvncserver/rfbserver.c:
	- integrated latest x11vnc-version which fixes ICA-crahes when
	  disconnecting in certain situations
	- disabled x11vnc-debug-console per default

2008-06-13	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	* ima/src/main.cpp:
	* ima/src/main_window.cpp:
	* ima/italc.1:
	applied patch by Stephane Graber <stgraber/at/gmail/dot/com> which
	adds -isdhost option in order to connect to local ISD's in
	TC-environments

2008-06-11	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/resources/cs.qm:
	* ica/resources/pt_br.qm:
	* ica/resources/fi.ts:
	* ica/resources/fr.qm:
	* ica/resources/es.qm:
	* ica/resources/nn.qm:
	* ica/resources/pl.qm:
	* ica/resources/it.qm:
	* ica/resources/cs.ts:
	* ica/resources/sl.qm:
	* ica/resources/uk.qm:
	* ica/resources/pt_br.ts:
	* ica/resources/es.ts:
	* ica/resources/fr.ts:
	* ica/resources/zh.qm:
	* ica/resources/nn.ts:
	* ica/resources/pl.ts:
	* ica/resources/it.ts:
	* ica/resources/ru.qm:
	* ica/resources/sl.ts:
	* ica/resources/uk.ts:
	* ica/resources/zh.ts:
	* ica/resources/fi.qm:
	* ica/resources/ru.ts:
	* ica/resources/el.qm:
	* setup/resources/fr.qm: