@@ -1,3 +1,9 @@
+2008-06-26	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
+	* ima/src/client.cpp:
+	do not call client::update() outside of GUI-thread - fixes crashes of
+	master
+
 2008-06-24	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
 	* ica/src/ivs.cpp:
